fixed point allocation bug and changed tile background

--- a/style.css
+++ b/style.css
@@ -19,7 +19,10 @@ body{
   display: flex;
   flex-direction: column;
 }
-.on{
+td.off{
+  background: url('noMole.jpg');
+}
+td.on{
   background: url("mole.jpg")
 }
 
