--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
   text-align: center;
   font-family: Georgia;
-  background-color: #339999;
+  /*background-color: #1d77a8;*/
 }
 
 #game_container{
@@ -11,7 +11,6 @@ body{
 }
 #containerhead{
   flex:100%;
-
 }
 
 .One{
@@ -26,7 +25,7 @@ td.on{
   background: url("mole.jpg")
 }
 
-.bad{
+td.bad{
   background: url("badmole.jpg")
 }
 
@@ -37,7 +36,6 @@ td.on{
   margin: 10px;
   background-color: lightgray;
   font-size: 1em;
-  /*color:white;*/
 }
 
 table{
